--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,6 +2,7 @@
 @import "./partial/variable.scss";
 @import "./partial/navbar.scss";
 @import "./partial/header.scss";
+@import "./partial/todo.scss";
 @import "./partial/footer.scss";
 
 *{
